@@ -1,6 +1,6 @@
 // functions.cpp -- MUX function handlers.
 //
-// $Id: functions.cpp,v 1.173 2007/04/14 04:57:05 sdennis Exp $
+// $Id: functions.cpp,v 1.175 2007/08/07 12:53:58 sdennis Exp $
 //
 // MUX 2.4
 // Copyright (C) 1998 through 2005 Solid Vertical Domains, Ltd. All
@@ -6040,11 +6040,7 @@ static FUNCTION(fun_height)
         dbref target = lookup_player(executor, pTargetName, true);
         if (Good_obj(target))
         {
-            if (  executor == target
-               || See_All(executor))
-            {
-                nHeight = fetch_height(target);
-            }
+            nHeight = fetch_height(target);
         }
     }
     safe_ltoa(nHeight, buff, bufc);
@@ -6059,7 +6055,7 @@ static FUNCTION(fun_width)
     UNUSED_PARAMETER(cargs);
     UNUSED_PARAMETER(ncargs);
 
-    long nWidth = 24;
+    long nWidth = 78;
     if (is_rational(fargs[0]))
     {
         SOCKET s = mux_atol(fargs[0]);
@@ -6083,11 +6079,7 @@ static FUNCTION(fun_width)
         dbref target = lookup_player(executor, pTargetName, true);
         if (Good_obj(target))
         {
-            if (  executor == target
-               || See_All(executor))
-            {
-                nWidth = fetch_width(target);
-            }
+            nWidth = fetch_width(target);
         }
     }
     safe_ltoa(nWidth, buff, bufc);
