@@ -1,5 +1,5 @@
 TinyMUX 2.4:  CHANGES
-Last Update:  April 2007
+Last Update:  August 2007
 
 Major changes that may affect performance and require softcode tweaks:
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -318,6 +318,8 @@ Bug Fixes:
  -- CLog::AppendLog() does not actually position log at end of existing
     log file. Net result is only that first two lines (Containing to
     INI/LOAD entries) are lost.
+ -- Fix WIDTH() to default to 78 instead of 24 (Issue 354).
+ -- Open permissions on WIDTH() and HEIGHT() (Issue 356).
 
 
 Performance Enhancements:
